# CN_CA1

./: .gitignore  .gitmodules  CMakeLists.txt  Main.qml  README.md  audiocapture.cpp  audiocapture.h  audioin.cpp  audioin.h  audioinput.cpp  audioinput.h  audiooutput.cpp  audiooutput.h  main.cpp  main.qml  rapidjson.h  resources.qrc  signalmanager.cpp  signalmanager.h  socketio.cpp  socketio.h  webrtc.cpp  webrtc.h
qml/: AudioSettings.qml  IncommingCallPopup.qml  Main.qml  RegisterPopup.qml
report/: report.md
signaling server/: package-lock.json  package.json  server.js
signaling server/examples/: example-client1.js
signalingServer/: package-lock.json  package.json  server.js
socket.io-client-cpp/src/internal/: sio_client_impl.cpp  sio_client_impl.h
